# ci-hunter

./: .gitignore  ARCHITECTURE.md  README.md  alembic.ini  docker-compose.postgres.yml  pyproject.toml
.github/workflows/: postgres-integration.yml
docs/: ARCHITECTURE.md  CONFIG.md  QUEUE.md  ROADMAP.md
migrations/: env.py
migrations/versions/: 0001_initial_schema.py
src/ci_hunter/: __init__.py  analyze.py  cli.py  config.py  detection.py  file_lock.py  job_queue_file.py  junit.py  migration_config.py  queue.py  report.py  run_duration.py  runner.py  scheduler_cmd.py  steps.py  storage.py  time_utils.py  webhook_cmd.py  webhook_http.py  worker.py  (+11 more)
tests/: test_analyze.py  test_cli.py  test_config.py  test_console_script.py  test_detection.py  test_file_lock.py  test_github_actions_client.py  test_github_app_auth.py  test_github_artifacts.py  test_github_comments.py  test_github_logs.py  test_http_retry.py  test_junit_parser.py  test_migration_config.py  test_migrations.py  test_postgres_operationalization.py  test_pr_inference.py  test_queue.py  test_report.py  test_report_json.py  test_run_duration.py  test_runner.py  test_scheduler_cmd.py  test_steps_parser.py  test_storage.py  test_webhook.py  test_webhook_cli.py  test_webhook_cli_bridge.py  test_webhook_cmd.py  test_webhook_entry.py  test_webhook_handler.py  test_webhook_http.py  test_webhook_http_server.py  test_webhook_httpd.py  test_webhook_httpd_app.py  test_webhook_httpd_app_factory.py  test_webhook_httpd_cli.py  test_webhook_httpd_httpserver.py  test_webhook_httpd_runner.py  test_webhook_httpd_server.py  (+9 more)
(+18 files in other folders)
