[project]
name = "ci-hunter"
version = "0.1.0"
description = "CI/Test slowdown detection agent"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27.0",
  "pyjwt[crypto]>=2.8.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "respx>=0.21.0",
]

[project.scripts]
ci-hunter = "ci_hunter.cli:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
