[project]
name = "ci-hunter"
version = "0.1.0"
description = "CI/Test slowdown detection agent"
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.13.0",
  "httpx>=0.27.0",
  "psycopg[binary]>=3.2.0",
  "pyjwt[crypto]>=2.8.0",
  "pyyaml>=6.0",
  "sqlalchemy>=2.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "respx>=0.21.0",
]

[project.scripts]
ci-hunter = "ci_hunter.cli:main"
ci-hunter-webhook = "ci_hunter.webhook_cmd:main"
ci-hunter-webhook-listener = "ci_hunter.webhook_listener_cmd:main"
ci-hunter-scheduler = "ci_hunter.scheduler_cmd:main"
ci-hunter-worker = "ci_hunter.worker_cmd:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
